dev/styles/_media.scss
@media (max-width: 414px) {
  header {
    .wrapper {
      grid-template-columns: 1fr;
      grid-template-rows: 1fr 2fr;
  
      h1 {
        font-size: 6.5rem;
        text-align: center;
      }
  
      h2 {
        font-size: 1.2rem;
        padding: 0 5%;
        margin: 0;
      }
  
      .main-description {
        padding-right: 0;
      }
    }

    .login-container {
      width: 80%;
    }
  }

  footer {
    padding: 3% 0;
  }

  .notes-header .container {
    width: 95%;
  }

  .notes-header__heading h1 {
    margin: 5% 0;
  }

  main .selection-head {
    width: 95%;

    h2 {
      font-size: 1.4rem;
    }
  }

  .show-notes, .show-all {
    margin-top: 3.5%;
  }

  .char-notes {
    width: 95%;
  }

  .add-notes-popup {
    width: 95%;
    margin: 0;

    select {
      margin-right: 5px;
    }

    textarea {
      width: 100%;
    }
  }

  .user-form {
    width: 95%;
  }

  .user-header {
    width: 95%;

    h1 {
      margin: 5% 0;
    }
  }

  .grid-container {
    grid-template-columns: 100%;
    grid-template-rows: 1fr auto;

    .game-select {
      text-align: center;
      a {
        margin-right: 0;
      }
    }

    ul {
      margin-top: 20px;
    }
  }
}

